# OpenGL-Learning

./: README.md  main.cpp
1-BasicRendering/: CMakeLists.txt
1-BasicRendering/src/: main.cpp
1-BasicRendering/src/classes/renderer/: renderer.h
2-Textures/src/: engine.cpp  engine.h  main.cpp
2-Textures/src/shaders/: basicFragmentShader.glsl  basicVertexShader.glsl
src/: main.cpp  renderItem.cpp  shader.cpp  shaderLoader.cpp
src/classes/mesh/: mesh.h
src/engine/shaderLoader/: shaderLoader.cpp  shaderLoader.h
src/headers/renderItem/: renderItem.h
src/headers/shader/: shader.h
src/headers/shaderLoader/: shaderLoader.h
src/shaders/: basicVertexShader.glsl
